GNOME Bugzilla – Bug 776670
F1 does not open up help display
Last modified: 2017-01-10 10:26:17 UTC
This is on gnome-photos 3.22.2. The shortcut menu describes the key F1 to being able to display the help menu. When pressing F1, nothing happens. I can press help in the menu by the activities button and get the help display.
Created attachment 342810 [details] [review] This fixes photos-application.c by allowing the F1 key to open the help menu. I haven't tested the patch but it should work.
Review of attachment 342810 [details] [review]: Thanks for the patch. Looks good. Could you please generate the patch with 'git format-patch' instead of plain 'diff'? That way it will be properly attributed to 'Your name <email@address>' and have an appropriate commit message. If you want to read more, then see: https://wiki.gnome.org/Newcomers/CodeContributionWorkflow#Submitting_patches ::: photos-application.c @@ +1632,3 @@ const gchar *search_accels[2] = {"<Primary>f", NULL}; const gchar *select_all_accels[2] = {"<Primary>a", NULL}; + const gchar *help_menu_accels[2] = {"F1", NULL}; Nitpick: would be nice to move it above 'print' to maintain the order. @@ +1855,3 @@ gtk_application_set_accels_for_action (GTK_APPLICATION (self), "app.search", search_accels); gtk_application_set_accels_for_action (GTK_APPLICATION (self), "app.select-all", select_all_accels); + gtk_application_set_accels_for_action (GTK_APPLICATION (self), "app.help", help_menu_accels); Ditto.
Created attachment 342916 [details] [review] Fixed F1 key not displaying help menu when pressed. I just added the accel and the call to the function. https://bugzilla.gnome.org/show_bug.cgi?id=776670
https://bugzilla.gnome.org/attachment.cgi?id=342810
Reopening. Did you close it by mistake?
Review of attachment 342916 [details] [review]: Thanks for re-submitting it as 'git format-patch'. Some minor issues: (a) your name doesn't show up correctly (b) the formatting of the commit message can be improved See https://wiki.gnome.org/Newcomers/CodeContributionWorkflow for further pointers.
Created attachment 343226 [details] [review] application: Add F1 accelerator to show help I took the liberty to fix up the above details and pushed it.