application: Add F1 accelerator to show help

https://bugzilla.gnome.org/show_bug.cgi?id=776670